fix responsiveness of header on mobile, add unstyled skeleton content

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,4 +1,5 @@
 $mobile-transition-width: 700px;
+$mini-mobile-transition-width: 500px;
 
 @import url('http://fonts.googleapis.com/css?family=Arvo:700|Open+Sans:400italic,400');
 
@@ -70,7 +71,6 @@ header {
       line-height: 1em;
       margin: 15px 0 10px;
       min-height: 40px;
-      min-width: 180px;
       max-width: 200px;
 
       &::after {
@@ -82,6 +82,32 @@ header {
       font-size: 1.1rem;
       max-width: 200px;
       margin: -0.5rem auto 0;
+    }
+  }
+}
+
+@media (max-width: $mini-mobile-transition-width) {
+  header {
+
+    .title {
+      margin-left: 1em;
+    }
+
+    h1 {
+      font-size: 1rem;
+      max-width: 120px;
+
+      &::after {
+        margin-top: 1.5rem;
+      }
+    }
+
+    h2 {
+      padding: 0 1em;
+      background: white;
+      font-size: 0.8rem;
+      width: 100px;
+      margin: -1rem auto 0;
     }
   }
 }
@@ -215,6 +241,16 @@ a {
   a.nav-item {
     font-size: 1.5rem;
     padding: 0.5em 1em;
+  }
+}
+
+@media screen and (max-width: $mini-mobile-transition-width) {
+  .dropdown {
+    margin-right: 10px;
+  }
+
+  a.nav-item {
+    font-size: 1rem;
   }
 }
 
